scss/partials/_reactions.scss
div.reactions {
  height: 25px;
  float: left;

  div.reactions-list {

    button.reaction-btn {
      float: left;
      outline: none;
      position: relative;
      height: 32px;
      margin-left: 1px;
      cursor: default;
      background-color: $carrot_light_gray_2;
      padding: 0px 14px;
      color: $carrot_light_gray_3;
      @include avenir_H();
      font-size: 14px;

      &:first-child {
        border-top-left-radius: 100px;
        border-bottom-left-radius: 100px;
      }

      &:last-child {
        border-top-right-radius: 100px;
        border-bottom-right-radius: 100px;
      }

      span.reaction {
        font-size: 15px;
        top: 3px;
        position: relative;
        display: inline-block;
        -webkit-filter: grayscale(100%);
        filter: grayscale(100%);
      }

      div.count {
        margin-left: 5px;
        padding-top: 1px;
        display: inline-block;
        color: $carrot_light_gray_3;
        vertical-align: bottom;
      }

      &.can-react {
        cursor: pointer;

        &:hover {
          span.reaction {
            -webkit-filter: grayscale(0%);
            filter: grayscale(0%);
          }
        }
      }

      &.reacted {
        background-color: $carrot_light_yellow;

        span.reaction {
          -webkit-filter: grayscale(0%);
          filter: grayscale(0%);
        }

        div.count {
          color: #FDAB1D;
        }
      }

      &.reaction-picker {
        div.count {
          vertical-align: middle;
        }
      }
    }
  }

  div.reactions-picker-container {
    position: relative;
    display: none;
    z-index: 1234;

    &.visible {
      display: block;
    }

    div.emoji-mart {
      position: absolute;
      bottom: -31px;
    }
  }
}

