Set minimum width for span.reaction to 22px to avoid cut off on different emoji font families.

--- a/scss/partials/_reactions.scss
+++ b/scss/partials/_reactions.scss
@@ -34,6 +34,7 @@ div.reactions {
         display: inline-block;
         -webkit-filter: grayscale(100%);
         filter: grayscale(100%);
+        min-width: 22px;
       }
 
       div.count {
